--- a/paperless-ngx/config.yaml
+++ b/paperless-ngx/config.yaml
@@ -1,5 +1,5 @@
 name: Paperless-ngx
-version: 1.17.4b
+version: 1.17.4c
 slug: paperless-ngx
 description: A community-supported supercharged version of paperless
 url: https://github.com/BenoitAnastay/paperless-home-assistant-addon
