--- a/paperless-ngx/config.yaml
+++ b/paperless-ngx/config.yaml
@@ -1,47 +1,37 @@
 name: Paperless-ngx
-version: 1.17.4d
+version: v1.17.4e
 slug: paperless-ngx
-description: A community-supported supercharged version of paperless
-url: https://github.com/BenoitAnastay/paperless-home-assistant-addon
-codenotary: benoit@anastay.dev
-startup: services
-init: false
-panel_icon: mdi:leaf
-panel_title: Paperless
+url: https://github.com/paperless-ngx/paperless-ngx
+description:
+  Paperless is an application that manages your personal documents. With
+  the help of a document scanner, paperless transforms your wieldy physical document
+  binders into a searchable archive and provides many utilities for finding and managing
+  your documents.
+webui: http://[HOST]:[PORT:8000]
 arch:
-- aarch64
-- amd64
+  - aarch64
+  - amd64
+startup: system
 ports:
   8000/tcp: 8000
 ports_description:
-  8000/tcp: Web Interface (make empty to disable)
-host_network: true
-apparmor: false
+  8000/tcp: Web interface
 map:
-- share:rw
-journald: true
+  - share:rw
 options:
-  url:
-  filename:
-    format: "{created_year}/{correspondent}/{title}"
-  ocr:
-    language: eng
+  filename: "{created_year}/{correspondent}/{title}"
+  language: eng
   default_superuser:
     username:
     email:
     password:
-  timezone:
-    timezone: UTC
+  timezone: UTC
 schema:
-  url: str
-  filename:
-    format: str
-  ocr:
-    language: str
+  filename: str
+  language: str
   default_superuser:
     username: str
     email: email
     password: password
-  timezone:
-    timezone: str
+  timezone: str
 image: ghcr.io/benoitanastay/paperless-ngx/{arch}
