--- a/paperless-ngx/config.yaml
+++ b/paperless-ngx/config.yaml
@@ -1,5 +1,5 @@
 name: Paperless-ngx
-version: v1.17.4e
+version: 1.17.4e
 slug: paperless-ngx
 url: https://github.com/paperless-ngx/paperless-ngx
 description:
