--- a/paperless-ngx/config.yaml
+++ b/paperless-ngx/config.yaml
@@ -1,5 +1,5 @@
 name: Paperless-ngx
-version: 1.17.4e
+version: 1.17.4f
 slug: paperless-ngx
 url: https://github.com/paperless-ngx/paperless-ngx
 description:
@@ -21,6 +21,7 @@ map:
 options:
   filename: "{created_year}/{correspondent}/{title}"
   language: eng
+  language_packages: eng deu fra ita spa
   default_superuser:
     username:
     email:
@@ -29,6 +30,7 @@ options:
 schema:
   filename: str
   language: str
+  language_packages: str
   default_superuser:
     username: str
     email: email
