--- a/.addons.yml
+++ b/.addons.yml
@@ -1,7 +1,7 @@
 ---
 channel: stable
 addons:
-  example:
+  paperless-ngx:
     repository: BenoitAnastay/paperless-home-assistant-addon
     target: paperless-ngx
     image: ghcr.io/benoitanastay/paperless-ngx/{arch}
