--- a/paperless-ngx/config.yaml
+++ b/paperless-ngx/config.yaml
@@ -1,33 +1,35 @@
 name: Paperless-ngx
-version: 1.17.4f
+version: 0.1.1
 slug: paperless-ngx
 url: https://github.com/paperless-ngx/paperless-ngx
-description:
-  Paperless is an application that manages your personal documents. With
+description: Paperless is an application that manages your personal documents. With
   the help of a document scanner, paperless transforms your wieldy physical document
   binders into a searchable archive and provides many utilities for finding and managing
   your documents.
 webui: http://[HOST]:[PORT:8000]
+stage: experimental
 arch:
-  - aarch64
-  - amd64
+- aarch64
+- amd64
 startup: system
 ports:
   8000/tcp: 8000
 ports_description:
   8000/tcp: Web interface
 map:
-  - share:rw
+- share:rw
 options:
-  filename: "{created_year}/{correspondent}/{title}"
+  url: null
+  filename: '{created_year}/{correspondent}/{title}'
   language: eng
   language_packages: eng deu fra ita spa
   default_superuser:
-    username:
-    email:
-    password:
+    username: null
+    email: null
+    password: null
   timezone: UTC
 schema:
+  url: str?
   filename: str
   language: str
   language_packages: str
