--- a/paperless-ngx/config.yaml
+++ b/paperless-ngx/config.yaml
@@ -29,7 +29,7 @@ options:
     password: null
   timezone: UTC
 schema:
-  url: str?
+  url: "str?"
   filename: str
   language: str
   language_packages: str
