--- a/paperless-ngx/config.yaml
+++ b/paperless-ngx/config.yaml
@@ -1,5 +1,5 @@
 name: Paperless-ngx
-version: 0.1.2
+version: 0.1.3
 slug: paperless-ngx
 url: https://github.com/paperless-ngx/paperless-ngx
 description: Paperless is an application that manages your personal documents. With
@@ -19,7 +19,6 @@ ports_description:
 map:
 - share:rw
 options:
-  url: null
   filename: '{created_year}/{correspondent}/{title}'
   language: eng
   language_packages: eng deu fra ita spa
@@ -29,7 +28,7 @@ options:
     password: null
   timezone: UTC
 schema:
-  url: "str?"
+  url: str?
   filename: str
   language: str
   language_packages: str
@@ -38,4 +37,5 @@ schema:
     email: email
     password: password
   timezone: str
+  polling_interval: int?
 image: ghcr.io/benoitanastay/paperless-ngx/{arch}
