--- a/paperless-ngx/config.yaml
+++ b/paperless-ngx/config.yaml
@@ -1,10 +1,13 @@
 name: Paperless-ngx
-version: 1.1.2
+version: 1.1.3
 slug: paperless-ngx
 url: https://github.com/paperless-ngx/paperless-ngx
 init: false
 ingress: true
 ingress_stream: true
+panel_icon: mdi:leaf
+homeassistant_api: true
+hassio_api: true
 description: Paperless is an application that manages your personal documents. With
   the help of a document scanner, paperless transforms your wieldy physical document
   binders into a searchable archive and provides many utilities for finding and managing
