--- a/paperless-ngx/config.yaml
+++ b/paperless-ngx/config.yaml
@@ -1,5 +1,5 @@
 name: Paperless-ngx
-version: 1.1.3
+version: 1.2.0
 slug: paperless-ngx
 url: https://github.com/paperless-ngx/paperless-ngx
 init: false
@@ -38,6 +38,8 @@ options:
   keyfile: privkey.pem
 schema:
   url: str?
+  csrf_allowed:
+  - str?
   filename: str
   language: str
   language_packages: str
@@ -54,4 +56,5 @@ schema:
   ssl: bool
   certfile: str
   keyfile: str
+  max_upload: int?
 image: ghcr.io/benoitanastay/paperless-ngx/{arch}
