--- a/.addons.yml
+++ b/.addons.yml
@@ -13,3 +13,7 @@ addons:
     repository: BenoitAnastay/heimdall-home-assistant-addon
     target: heimdall
     image: ghcr.io/benoitanastay/heimdall/{arch}
+  authelia:
+    repository: BenoitAnastay/authelia-home-assistant-addon
+    target: authelia
+    image: ghcr.io/benoitanastay/authelia/{arch}
