:tada: Release of add-on Authelia 0.1.2

--- a/authelia/config.yaml
+++ b/authelia/config.yaml
@@ -1,5 +1,5 @@
 name: Authelia
-version: 0.1.1
+version: 0.1.2
 slug: authelia
 url: https://www.authelia.com/
 init: false
@@ -17,6 +17,7 @@ options:
   domain: exemple.com
 schema:
   domain: str
+  config_filters: str?
   smtp_username: str?
   smtp_password: str?
   smtp_sender: str?
