--- a/.addons.yml
+++ b/.addons.yml
@@ -17,3 +17,7 @@ addons:
     repository: BenoitAnastay/authelia-home-assistant-addon
     target: authelia
     image: ghcr.io/benoitanastay/authelia/{arch}
+  tika-gotenberg:
+     repository: BenoitAnastay/tika-gotenberg-home-assistant-addon
+     target: tika-gotenberg
+     image: ghcr.io/benoitanastay/tika-gotenberg/{arch}
