--- a/paperless-ngx/config.yaml
+++ b/paperless-ngx/config.yaml
@@ -1,5 +1,5 @@
 name: Paperless-ngx
-version: 2.2.2
+version: 2.3.0
 slug: paperless-ngx
 url: https://github.com/paperless-ngx/paperless-ngx
 init: false
@@ -26,7 +26,7 @@ map:
 - share:rw
 - ssl
 options:
-  filename: '{created_year}/{correspondent}/{title}'
+  filename: '{{ created_year }}/{{ correspondent }}/{{ title }}'
   language: eng
   language_packages: eng deu fra ita spa
   default_superuser:
@@ -38,6 +38,7 @@ options:
   certfile: fullchain.pem
   keyfile: privkey.pem
   ingress_auth: false
+  tika_gotenberg: false
 schema:
   url: str?
   csrf_allowed:
@@ -62,4 +63,6 @@ schema:
   usermap_uid: int?
   usermap_gid: int?
   ingress_auth: bool
+  tika_gotenberg: bool
+  locales: str?
 image: ghcr.io/benoitanastay/paperless-ngx/{arch}
